tests/negative/gold/lambda_test.gold
tests/negative/lambda_test.toit:6:24: error: Unresolved identifier: 'unresolved'
  lambda := (:: return unresolved 499)
                       ^~~~~~~~~~
tests/negative/lambda_test.toit:6:17: error: Can't explicitly return from within a lambda
  lambda := (:: return unresolved 499)
                ^~~~~~
tests/negative/lambda_test.toit:7:9: error: Unresolved identifier: 'unresolved2'
  throw unresolved2
        ^~~~~~~~~~~
Compilation failed.
